Step back from a preview functionality